<resources>
    <string name="app_name">Nexum</string>
    <string name="welcome_to_the_nexum_app">WELCOME TO THE NEXUM APP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="connected_forever">CONNECTED FOREVER</string>
    <string name="new_to_the_app_click_here">New to the app? Click here</string>
    <string name="header">header</string>
    <string name="connected_forever2">CONNECTED FOREVER</string>
    <string name="owner">Owner</string>
    <string name="driver">Driver</string>
    <string name="please_sign_in_owner">PLEASE SIGN IN OWNER</string>
    <string name="password">PASSWORD:</string>
    <string name="e_mail">E-MAIL:</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="e_mail2">E-mail</string>
    <string name="log_in2">LOG IN</string>
    <string name="forgot_password2">Forgot Password?</string>
    <string name="password2">Password</string>
    <string name="e_mail3">E-MAIL:</string>
    <string name="please_sign_in_driver">PLEASE SIGN IN DRIVER</string>
    <string name="password3">PASSWORD:</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="license_code">License Code</string>
    <string name="location">Location</string>
    <string name="willing_to_relocate">Willing to relocate</string>
    <string name="licence_code"><![CDATA[Licence Code >]]></string>
    <string name="locationBtn"><![CDATA[Location >]]></string>
    <string name="age_range"><![CDATA[Age range >]]></string>
    <string name="gender"><![CDATA[Gender >]]></string>
    <string name="willing_to_relocateBtn"><![CDATA[Willing to relocate >]]></string>
    <string name="search">Search</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="license_code2">License Code</string>
    <string name="code_8_150">Code 8 (150)</string>
    <string name="code_10_120">Code 10 (120)</string>
    <string name="code_14_80">Code 14 (80)</string>
    <string name="code_1_12">Code 1 (12)</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="all_7572">All (7572)</string>
    <string name="manage_account">Manage Account</string>
    <string name="help_and_support">Help and support</string>
    <string name="drivers_hired">Drivers hired</string>
    <string name="contact_customer_service">Contact Customer Service</string>
</resources>